# poker-bot

./: .gitignore  README.md  cards.py  main.py  poker_bot.py
PokerBotAi/: C:\Users\witzk\OneDrive\Desktop\Projects\poker-bot\PokerBotAi\testout_linear.json  CMakeLists.txt  OutputsAndVariousNotes.txt  PokerBotAi.cpp  PokerBotAi.h  README.md  example.txt  gdbSetup.sh  makefile  testout.json  testout1.json  testout2.json
PokerBotAi/Exploration/: NeuralNetData.xlsx
PokerBotAi/PythonMachineLearning/: main.py
PokerBotAi/debug-data/: generating-operation.json  linear-after-training.json  nn-weights-10.json  nn-weights-100.json  nn-weights-15.json  nn-weights-20.json  nn-weights-25.json  nn-weights-30.json  nn-weights-35.json  nn-weights-40.json  nn-weights-45.json  nn-weights-5.json  nn-weights-50.json  nn-weights-55.json  nn-weights-60.json  nn-weights-65.json  nn-weights-70.json  nn-weights-75.json  nn-weights-80.json  nn-weights-85.json  nn-weights-90.json  nn-weights-95.json  nn-weights-begin.json
PokerBotAi/src/: Constants.h  NeuralNet.cpp  NeuralNet.h  PokerBotAi.cpp  testing.h
PokerBotAi/src/MNIST/: MNIST.cpp  MNIST.h
PokerBotAi/src/Math/: Matrix.cpp  Matrix.h  ScalarFuncs.cpp  ScalarFuncs.h  Sigmoid.cpp  Sigmoid.h  VectorUtils.cpp  VectorUtils.h
PokerBotAi/src/NeuralNet/: NeuralNet.cpp  NeuralNet.h
PokerBotAi/src/Output/: Json.h  Printable.cpp  Printable.h
PokerBotAi/src/Testing/: NNTests.cpp  NNTests.h  TestData.cpp  TestData.h
ai/: CMakeLists.txt  README.md
web-bot/: README.md  cards.py  main.py  poker_bot.py
