# CMakeList.txt : CMake project for PokerBotAi, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("PokerBotAi")

# Add source to this project's executable.
add_executable (PokerBotAi "PokerBotAi.cpp" "PokerBotAi.h")

# TODO: Add tests and install targets if needed.
